Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>In2015.mini.debconf.org by rigved</title>
+    <title>in2015.mini.debconf.org by rigved</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>In2015.mini.debconf.org</h1>
+        <h1>in2015.mini.debconf.org</h1>
         <h2>Mini-DebConf Mumbai 2015 Website</h2>
 
         <section id="downloads">
